--- a/events/templates/events/_search_listing.html
+++ b/events/templates/events/_search_listing.html
@@ -1,7 +1,23 @@
-<ul>
-    {% for event in object_list %}
-        <li>
-            {{ object.place_name }}
-        </li>
-    {% endfor %}
-</ul>
+{% extends "events/base.html" %}
+{% load dated_static %}
+{% block title %}Events on Repower at Home{% endblock %}
+{% block breadcrumbs %}
+    <a href="{% url index %}">Home</a> &rsaquo;
+    <a href="{% url event-show %}">Events</a> &rsaquo;
+    Search Results
+{% endblock %}
+{% block right_content %}
+<div class="grid_6 alpha">
+    <div class="box_two_top"></div>
+    <div class="box_two_middle">
+        <h1>Search Results</h1>
+        {% with object_list as events %}
+            {% include 'events/_event_nugget_list.html' %}
+        {% endwith %}
+        {% if page_obj.has_next %}
+            <a class="search_more" href="{{ request.path }}?search={{ request.GET.search }}&amp;page={{ page_obj.next_page_number }}">more</a>
+        {% endif %}
+    </div>
+    <div class="box_two_bottom"></div>
+</div>
+{% endblock %}
