--- a/events/templates/events/_details.html
+++ b/events/templates/events/_details.html
@@ -1,9 +1,3 @@
-{% if event.event_type.description %}
-    <div>
-        <h3>Description</h3>
-        <p>{{ event.event_type.description }}</p>
-    </div>
-{% endif %}
 {% if event.details %}
     <div>
         <h3>Details</h3>
@@ -17,10 +11,11 @@
 <div>
     <h3>Where</h3>
     <p>
-        {% if event.place_name %}<span>{{ event.place_name }}</span><br />{% endif %}
         <span id="event_address">{{ event.where }}</span><br />
-        <span id="event_location">{{ event.location }} {{ event.location.zipcode }}</span>
     </p>
-    <div id="event_map"></div>
-    <br/>
+    <a href="http://maps.google.com/maps?q={{event.where|urlencode}}" 
+        title="Click to view a larger map"
+        target="_blank">
+        <img src="http://maps.google.com/maps/api/staticmap?center={{event.lat}},{{event.lon}}&zoom=16&size=431x200&markers={{event.lat}},{{event.lon}}&sensor=false" alt="Map of the event"/>
+    </a>
 </div>
