--- a/events/templates/events/edit.html
+++ b/events/templates/events/edit.html
@@ -4,6 +4,7 @@
 {% block breadcrumbs %}
     <a href="{% url index %}">Home</a> &rsaquo;
     <a href="{% url action_community_show %}">Community</a> &rsaquo;
+    <a href="{% url event-show %}">Events</a> &rsaquo;
     <a href="{{ event.get_absolute_url }}">{{ event }}</a> &rsaquo;
     Edit Event
 {% endblock %}
