rebranded team language with communities [completed: 594]

--- a/commitments/templates/commitments/show.html
+++ b/commitments/templates/commitments/show.html
@@ -53,7 +53,7 @@
         </ul>
         <h2>Level up</h2>
         <p>
-            Set a recruitment goal for yourself or <a href="{% url group_list %}">your team</a>. Challenge a friend to
+            Set a recruitment goal for yourself or <a href="{% url group_list %}">your community</a>. Challenge a friend to
             see who can recruit the most Trendsetters. A little friendly competition can go a long way towards inspiring
             people to keep at it.
         </p>
