--- a/events/templates/events/_volunteer_form.html
+++ b/events/templates/events/_volunteer_form.html
@@ -11,7 +11,7 @@
         </ul>
     </p>
     <p>
-        <h3>What type of team will you start?</h3>
+        <h3>What type of community will you start?</h3>
         <ul>
             <li>{{ form.school }}{{ form.school.label_tag }}</li>
             <li>{{ form.workplace }}{{ form.workplace.label_tag }}</li>
