--- a/groups/templates/groups/_search_listing.html
+++ b/groups/templates/groups/_search_listing.html
@@ -1,9 +1,9 @@
 {% extends "groups/base.html" %}
 {% load dated_static %}
-{% block title %}Teams on Repower at Home{% endblock %}
+{% block title %}Communities on Repower at Home{% endblock %}
 {% block breadcrumbs %}
     <a href="{% url index %}">Home</a> &rsaquo;
-    <a href="{% url group_list %}">Teams</a> &rsaquo;
+    <a href="{% url group_list %}">Communities</a> &rsaquo;
     Search Results
 {% endblock %}
 {% block right_content %}
