--- a/groups/templates/groups/base.html
+++ b/groups/templates/groups/base.html
@@ -1,2 +1,2 @@
 {% extends "base.html" %}
-{% block rah_nav_select %}nav_teams{% endblock %}
+{% block rah_nav_select %}nav_communities{% endblock %}
