--- a/groups/templates/groups/group_disc_create.html
+++ b/groups/templates/groups/group_disc_create.html
@@ -2,7 +2,7 @@
 {% block title %}Create Discussion{% endblock %}
 {% block breadcrumbs %}
 <a href="{% url index %}">Home</a> &rsaquo;
-<a href="{% url group_list %}">Teams</a> &rsaquo;
+<a href="{% url group_list %}">Communities</a> &rsaquo;
 <a href="{% url group_detail group.slug %}">{{ group.name }}</a> &rsaquo;
 Create Discussion
 {% endblock %}
