--- a/templates/500.html
+++ b/templates/500.html
@@ -53,7 +53,7 @@
                     <div id="nav">
                         <a href="/" id="nav_home">Home</a>
                         <a href="/actions/" id="nav_actions" >Actions</a>
-                        <a href="/teams/" id="nav_teams">Teams</a>
+                        <a href="/communities/" id="nav_communities">Communities</a>
                         <a href="/actions/community/" id="nav_community">Community</a>
                         <a href="/blog/" id="nav_blog">Blog</a>
                     </div>
