--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
                     <div id="nav">
                         <a href="{% url index %}" id="nav_home">Home</a>
                         <a href="{% url action_show %}" id="nav_actions" >Actions</a>
-                        <a href="{% url group_list %}" id="nav_teams">Teams</a>
+                        <a href="{% url group_list %}" id="nav_communities">Communities</a>
                         <a href="{% url action_community_show %}" id="nav_community">Community</a>
                         <a href="{% url blog_index %}" id="nav_blog">Blog</a>
                     </div>
