--- a/templates/rah/_magnify.html
+++ b/templates/rah/_magnify.html
@@ -6,7 +6,7 @@
     <a href='{% url event-show %}'> Host an energy meeting</a><br/>
     <a href='{% url invite-invite %}' class='invite_friend_link'>Invite a friend</a><br/>
     <a href='{% url twitter_oauth_post_status %}' id='twitter_status_link'>Share on twitter</a><br/>
-    <a href='{% url group_create %}'>Create a team</a><br/>
+    <a href='{% url group_create %}'>Create a community</a><br/>
 </div> 
 <div class="box_one_bottom"></div>
 <div id='invite_friend_dialog'>
