--- a/templates/rah/_tongue.html
+++ b/templates/rah/_tongue.html
@@ -35,7 +35,7 @@
     
     {% else %}
         <h3>Need an account?</h3>
-        <p>With an account you can track your progress and join teams!</p>
+        <p>With an account you can track your progress and join communities!</p>
         <p><a href="{% url register %}" class="button">Sign Up</a></p>
         <h3>Log in</h3>
         <form action="{% ifnotequal request.META.SERVER_PORT '8000' %}https://{{request.META.SERVER_NAME}}{%endifnotequal%}{% url login %}" method="post" id="login_form">
