--- a/templates/rah/vampire_hunt.html
+++ b/templates/rah/vampire_hunt.html
@@ -141,9 +141,9 @@
         
         <div class="box_one_top"></div>
         <div class="box_one_middle">
-            <h3>Top team recruiters</h3>
+            <h3>Top community recruiters</h3>
             <ul class="plain_list">
-                {% for leader in team_leaders %}
+                {% for leader in community_leaders %}
                     <li>
                         <p style="margin-bottom:9px">
                             <a href="{{ leader.get_absolute_url }}">{{ leader }}</a><br/>
