--- a/groups/templates/groups/group_create.html
+++ b/groups/templates/groups/group_create.html
@@ -1,19 +1,19 @@
 {% extends "groups/base.html" %}
 {% load dated_static %}
-{% block title %}Create a Team{% endblock %}
+{% block title %}Create a Community{% endblock %}
 {% block breadcrumbs %}
 <a href="{% url index %}">Home</a> &rsaquo;
-<a href="{% url group_list %}">Teams</a> &rsaquo;
-Create Team
+<a href="{% url group_list %}">Community</a> &rsaquo;
+Create Community
 {% endblock %}
 {% block right_content %}
     <div class="grid_6 alpha">
         <div class="box_two_top"></div>
         <div class="box_two_middle">
             <form id="group_form" action="" method="post" enctype="multipart/form-data">
-                <h1>Create a Team</h1>
+                <h1>Create a Community</h1>
                 {% include "groups/_group_form.html" %}
-                <p><input type="submit" value="Create Team" /></p>
+                <p><input type="submit" value="Create Community" /></p>
                 {% csrf_token %}
             </form>
         </div>
