--- a/groups/templates/groups/group_disc_list.html
+++ b/groups/templates/groups/group_disc_list.html
@@ -2,7 +2,7 @@
 {% block title %}{{group.is_joinable}} discussions{% endblock %}
 {% block breadcrumbs %}
     <a href="{% url index %}">Home</a> &rsaquo;
-    <a href="{% url group_list %}">Teams</a> &rsaquo;
+    <a href="{% url group_list %}">Communities</a> &rsaquo;
     <a href="{% url group_detail group.slug %}">{{ group.name }}</a> &rsaquo;
     Discussions
 {% endblock %}
@@ -27,8 +27,8 @@
             <a href="{% url group_disc_create group.slug %}" class="button">New discussion</a>
         {% else %}
             {% if group.is_joinable %}
-                You must be a member of this team to post discussions. 
-                <a class="button" href="{% url group_join group.id %}">Join Team</a>
+                You must be a member of this community to post discussions. 
+                <a class="button" href="{% url group_join group.id %}">Join Community</a>
             {% endif %}
         {% endif %}
     </div>
