--- a/groups/templates/groups/group_list.html
+++ b/groups/templates/groups/group_list.html
@@ -1,22 +1,22 @@
 {% extends "groups/base.html" %}
 {% load dated_static %}
-{% block title %}Teams on Repower at Home{% endblock %}
+{% block title %}Communities on Repower at Home{% endblock %}
 {% block right_content %}
 <div class="grid_6 alpha">
     <div class="box_two_top"></div>
     <div class="box_two_middle">
-        <h1>Start a Team</h1>
+        <h1>Start a Community</h1>
         <p>
-            Are you ready to lead the charge for a cleaner tomorrow? Starting a team is a great way to help
-            your neighborhood, church, school, or local group become more energy savvy. As a team leader, you can use your team to
-            organize meetings, encourage action, and track progress towards your team's goals.
+            Are you ready to lead the charge for a cleaner tomorrow? Starting a community is a great way to help
+            your neighborhood, church, school, or local group become more energy savvy. As a community leader, you can use your community to
+            organize meetings, encourage action, and track progress towards your community's goals.
         </p>
-        <p><a class="button" href="{% url group_create %}">Start a Team</a></p>
+        <p><a class="button" href="{% url group_create %}">Start a Community</a></p>
         {% if groups %}
-            <h1>Join a Team</h1>
+            <h1>Join a Community</h1>
             <p>
                 People across the country are working together to make their homes and their communities better than ever before. As
-                part of a team, you can brainstorm ideas for improving your community, share local tips about energy efficiency, and
+                part of a community, you can brainstorm ideas for improving your community, share local tips about energy efficiency, and
                 meet people who are interested in building a cleaner tomorrow.
             </p>
             {% include "groups/_group_nugget_list.html" %}
@@ -35,13 +35,13 @@
     {% if user.is_authenticated %}
         <div class="box_one_top"></div>
         <div class="box_one_middle">
-            <h3>Your Teams</h3>
+            <h3>Your Communities</h3>
             {% if my_groups %}
                 {% with my_groups as groups%}
                     {% include "groups/_group_nugget_list.html" %}
                 {% endwith %}
             {% else %}
-                <em>You're not a member of any teams yet!</em>
+                <em>You're not a member of any communities yet!</em>
             {% endif %}
         </div>
         <div class="box_one_bottom"></div>
