--- a/templates/rah/_progress_stats.html
+++ b/templates/rah/_progress_stats.html
@@ -4,5 +4,5 @@
     <h2 class="orange">{{ total_actions }}</h2><p>Actions</p>
     <h2 class="orange">{{ total_commitment_cards }}</h2><p>Commitment Cards</p>
     <h2 class="orange">{{ total_events }}</h2><p>Events</p>
-    <h2 class="orange">{{ total_teams }}</h2><p>Teams</p>
+    <h2 class="orange">{{ total_communities }}</h2><p>Communities</p>
 </div>
