--- a/actions/templates/actions/action_show.html
+++ b/actions/templates/actions/action_show.html
@@ -1,4 +1,4 @@
-{% extends "actions/base.html" %}
+{% extends "base/nav_9c.html" %}
 {% load dated_static %}
 {% block title %}Actions to Repower at Home{% endblock %}
 {% block right_content %}
