--- a/templates/rah/home_logged_out.html
+++ b/templates/rah/home_logged_out.html
@@ -1,4 +1,4 @@
-{% extends "rah/base.html" %}
+{% extends "base/base.html" %}
 {% load dated_static %}
 {% block rah_nav_select %}nav_home{% endblock %}
 {% block right_content %}
