--- a/templates/base/nav.html
+++ b/templates/base/nav.html
@@ -56,8 +56,10 @@
         </ul>
     </div>
 </div>
-<div class="grid_9 omega" id="content">
-    {% block 9c_content %}
-    {% endblock %}
+<div class="grid_9 omega" id="content_9c_container">
+    <div id="content_9c">
+        {% block content_9c %}
+        {% endblock %}
+    </div>
 </div>
 {% endblock %}
