--- a/templates/base/nav_6c3c.html
+++ b/templates/base/nav_6c3c.html
@@ -1,5 +1,5 @@
 {% extends "base/nav.html" %}
-{% block 9c_content %}
+{% block content_9c %}
     <div class="breadcrumbs">
         {% block breadcrumbs %}
             breadcrumbs
