--- a/templates/base/nav_9c.html
+++ b/templates/base/nav_9c.html
@@ -1,14 +1,15 @@
 {% extends "base/nav.html" %}
-{% block 9c_content %}
+{% block content_9c %}
     <div class="page_header">
         {% block page_header %}
             page header
         {% endblock %}
     </div>
-    <div class="ribbon_bar">
+    <div class="ribbon_large">
         {% block ribbon_bar %}
             ribbon
         {% endblock %}
+        <div class="ribbon_large_wrap"></div>
     </div>
     <div>
         {% block content %}
