--- a/events/templates/events/detail.html
+++ b/events/templates/events/detail.html
@@ -2,6 +2,11 @@
 {% load dated_static %}
 {% load comments %}
 {% block title %}{{ event }}{% endblock %}
+{% block extrahead %}
+    {% get_content_type_id for event as content_type_id %}
+    <link rel="alternate" type="application/atom+xml" href="{% url comments_feed content_type_id,event.id %}" 
+        title="{{ event }} comments feed" />
+{% endblock %}
 {% block breadcrumbs %}
     <a href="{% url index %}">Home</a> &rsaquo;
     <a href="{% url action_community_show %}">Community</a> &rsaquo;
@@ -69,6 +74,8 @@
     <br class="clear"/>
     <br class="clear"/>
     <div id="comments">
+        {% get_content_type_id for event as content_type_id %}
+        <a class="atom_link" href="{% url comments_feed content_type_id,event.id %}">{{ event }} comments feed</a>
         {% with event as object %}
             {% render_comment_list for object %}
             {% render_comment_form for object %}
