--- a/templates/comments/form.html
+++ b/templates/comments/form.html
@@ -11,12 +11,15 @@
             {% if field.is_hidden %}
                 {{ field }}
             {% else %}
-                {% if field.name == "comment" or field.name == "honeypot" %}
-                    {% if field.errors %}{{ field.errors }}{% endif %}
-                    <p class="form_row {% if field.errors %}error {% endif %}" 
-                        {% ifequal field.name "honeypot" %} style="display:none;" {% endifequal %}>
-                        {{ field }}
-                    </p>
+                {% if field.name == "honeypot" %}
+                    <p style="display: none;">{{ field }}</p>
+                {% else %}
+                    {% if field.name == "message_type" or field.name == "comment" %}
+                        {% if field.errors %}{{ field.errors }}{% endif %}
+                        <p class="form_row {% if field.errors %}error {% endif %}">
+                            {{ field }}
+                        </p>
+                    {% endif %}
                 {% endif %}
             {% endif %}
         {% endfor %}
@@ -25,7 +28,6 @@
         {% csrf_token %}
         </div>
     </form>
-    
 {% else %}
     <br/><br/>
     <a href="{% url login %}">Log in</a> or <a href="{% url register %}">sign up</a> to post comments.
